:icons: font

= Gentics Mesh Changelog

== 0.11.6 (TBD)

icon:check[] Image: Image handling has been optimized. Previously resizing larger images could temporarily lock up the http server.

== 0.11.5 (14.12.2017)

icon:plus[] UI: Add multi binary upload dialog. Users can now upload multiple files at once by clicking the button next to the create node button.

icon:plus[] UI: Binary fields can now be used as display fields. The filename is used as the display name for the node. link:https://github.com/gentics/mesh-ui/issues/11[#11]

icon:plus[] UI: It is now possible to specify the URL to the frontend of a system. This allows users to quickly go to the page that represents the node in the system.
  See the default `mesh-ui-config.js` or the link:https://getmesh.io/docs/beta/user-interface.html#_configuration[online documentation] for more details. link:https://github.com/gentics/mesh-ui/issues/14[#14]

icon:plus[] Upload: The upload handling code has been refactored in order to process the uploaded data in-parallel.

icon:plus[] Storage: The binary storage mechanism has been overhauled in preparation for Amazon S3 / link:https://minio.io/[Minio] support.
                     The data within the local binary storage folder and all binary fields will automatically be migrated.
                     The created `binaryFilesMigrationBackup` folder must be manually removed once the migration has finished.

icon:plus[] Core: The OrientDB graph database version was updated to version 2.2.31

icon:plus[] Core: Binary fields can now be chosen as display fields. The value of the display field is the filename of the binary.

icon:plus[] REST: The display name has been added to the node response. It can be found in the key `displayName`.

icon:plus[] GraphQL: The display name can now be fetched from a node via the `displayName` field.
